force-app/main/default/objects/Drug_License__c/Drug_License__c.object-meta.xml
<CustomObject>
    <label>Drug License</label>
    <pluralLabel>Drug Licenses</pluralLabel>
    <nameField>
        <label>Drug License Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description>Healthcare compliance tracking for drug licenses associated with distributor and retailer accounts (MOD-13 Industry Extensions)</description>
</CustomObject>