force-app/main/default/objects/Drug_License__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Account</label>
    <type>Lookup</type>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Drug Licenses</relationshipLabel>
    <relationshipName>Drug_Licenses</relationshipName>
    <deleteConstraint>Restrict</deleteConstraint>
</CustomField>