force-app/main/default/objects/Drug_License__c/fields/Is_Valid__c.field-meta.xml
<CustomField>
    <fullName>Is_Valid__c</fullName>
    <label>Is Valid</label>
    <type>Checkbox</type>
    <formula>AND(
    NOT(ISBLANK(Expiry_Date__c)),
    Expiry_Date__c &gt;= TODAY(),
    ISPICKVAL(Status__c, 'Active')
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
</CustomField>