force-app/main/default/objects/Drug_License__c/fields/Issuing_Authority__c.field-meta.xml
<CustomField>
    <fullName>Issuing_Authority__c</fullName>
    <label>Issuing Authority</label>
    <type>Text</type>
    <length>255</length>
</CustomField>