force-app/main/default/objects/Drug_License__c/fields/License_Number__c.field-meta.xml
<CustomField>
    <fullName>License_Number__c</fullName>
    <label>License Number</label>
    <type>Text</type>
    <length>100</length>
    <unique>true</unique>
    <externalId>true</externalId>
</CustomField>