force-app/main/default/objects/Drug_License__c/fields/License_Type__c.field-meta.xml
<CustomField>
    <fullName>License_Type__c</fullName>
    <label>License Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Retail Drug License</fullName>
            </value>
            <value>
                <fullName>Wholesale Drug License</fullName>
            </value>
            <value>
                <fullName>Manufacturing License</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>