force-app/main/default/objects/Drug_License__c/fields/Verified_By__c.field-meta.xml
<CustomField>
    <fullName>Verified_By__c</fullName>
    <label>Verified By</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Verified Drug Licenses</relationshipLabel>
    <relationshipName>Verified_Drug_Licenses</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>